--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "Italystrap",
+  "name": "ItalyStrap",
   "title": "Wordpress starter theme",
   "description": "Ottimizzazione landing corsi",
   "author": "Enea Overclokk",
   "homepage": "http://www.overclokk.net/italystrap",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-contrib-uglify": "~0.4.0",
@@ -12,6 +12,12 @@
     "grunt-contrib-csslint": "~0.2.0",
     "grunt-contrib-less": "~0.11.1",
     "grunt-contrib-compass": "~0.7.2",
-    "grunt-contrib-watch": "~0.6.1"
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-version": "^0.3.0",
+    "grunt-wp-readme-to-markdown": "^0.8.0",
+    "grunt-contrib-compress": "^0.13.0",
+    "grunt-github-releaser": "^0.1.17",
+    "grunt-prompt": "^1.3.0",
+    "grunt-git": "^0.3.3"
   }
 }
