--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "grunt-contrib-compress": "^0.13.0",
     "grunt-github-releaser": "^0.1.17",
     "grunt-prompt": "^1.3.0",
-    "grunt-git": "^0.3.3"
+    "grunt-git": "^0.3.3",
+    "grunt-bower-installer": "^0.3.6"
   }
 }
