--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "grunt-github-releaser": "^0.1.17",
     "grunt-prompt": "^1.3.0",
     "grunt-git": "^0.3.3",
-    "grunt-bower-installer": "^0.3.6"
+    "grunt-bower-installer": "^0.3.6",
+    "grunt-contrib-copy": "^0.7.0"
   }
 }
