--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "grunt-prompt": "^1.3.0",
     "grunt-git": "^0.3.3",
     "grunt-bower-installer": "^0.3.6",
-    "grunt-contrib-copy": "^0.7.0"
+    "grunt-contrib-copy": "^0.7.0",
+    "grunt-perfbudget": "^0.1.6"
   }
 }
