--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "ItalyStrap",
-  "version": "3.0.5",
+  "version": "4.0.0-beta",
   "homepage": "https://github.com/overclokk/ItalyStrap",
   "authors": [
     "Enea Overclokk <info@overclokk.net>"
