Some code refactoring

--- a/bower.json
+++ b/bower.json
@@ -28,8 +28,8 @@
     "bootstrap-sass": "latest",
     "font-awesome": "latest",
     "jquery": "latest",
-    "susy": "latest"
-  },
-  "dependencies": {
+    "susy": "~2.2.12",
+    "breakpoint-sass": "~2.7.0",
+    "bourbon": "~4.2.7"
   }
 }
