--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ItalyStrap",
-  "title": "Wordpress starter theme",
-  "description": "Ottimizzazione landing corsi",
+  "title": "A powerfull theme framework for WordPress",
+  "description": "",
   "author": "Enea Overclokk",
   "homepage": "http://www.overclokk.net/italystrap",
   "version": "4.0.0-beta.2",
