--- a/package.json
+++ b/package.json
@@ -4,23 +4,38 @@
   "description": "",
   "author": "Enea Overclokk",
   "homepage": "http://www.overclokk.net/italystrap",
-  "version": "4.0.0-beta.2",
+  "version": "4.0.0-beta.3",
+  "license": "GPL-2.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/overclokk/ItalyStrap.git"
+  },
   "devDependencies": {
     "grunt": "~0.4.5",
-    "grunt-contrib-uglify": "~0.7.0",
-    "grunt-contrib-jshint": "~0.11.0",
-    "grunt-contrib-csslint": "~0.4.0",
-    "grunt-contrib-less": "~1.0.0",
-    "grunt-contrib-compass": "~1.0.1",
+    "grunt-bump": "^0.7.2",
+    "grunt-composer": "^0.4.4",
+    "grunt-contrib-clean": "^0.7.0",
+    "grunt-contrib-compass": "^1.0.4",
+    "grunt-contrib-compress": "^0.14.0",
+    "grunt-contrib-copy": "^0.8.2",
+    "grunt-contrib-csslint": "~0.5.0",
+    "grunt-contrib-jshint": "^0.11.3",
+    "grunt-contrib-less": "^1.0.1",
+    "grunt-contrib-uglify": "^0.10.0",
     "grunt-contrib-watch": "~0.6.1",
-    "grunt-version": "^0.3.1",
-    "grunt-wp-readme-to-markdown": "^0.8.0",
-    "grunt-contrib-compress": "^0.13.0",
-    "grunt-github-releaser": "^0.1.17",
+    "grunt-copy-part-of-file": "^0.1.2",
+    "grunt-exec": "^0.4.6",
+    "grunt-file-creator": "^0.1.3",
+    "grunt-fontello": "^0.3.3",
+    "grunt-git": "^0.3.5",
+    "grunt-github-releaser": "^0.1.18",
+    "grunt-phpcbf": "^0.1.0",
+    "grunt-phpcs": "^0.4.0",
     "grunt-prompt": "^1.3.0",
-    "grunt-git": "^0.3.3",
+    "grunt-sync": "^0.4.1",
+    "grunt-version": "^1.0.0",
+    "grunt-wp-readme-to-markdown": "^1.0.0",
     "grunt-bower-installer": "^0.3.6",
-    "grunt-contrib-copy": "^0.7.0",
     "grunt-perfbudget": "^0.1.6"
   }
 }
