Better Template files loading

--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "psr-4": {
             "ItalyStrap\\Admin\\": "admin/",
             "ItalyStrap\\Core\\": "core/",
-            "ItalyStrap\\Customizer\\": "customizer/"
+            "ItalyStrap\\Customizer\\": "customizer/",
+            "ItalyStrap\\": "src/"
         }
 	}
 }
