--- a/package.json
+++ b/package.json
@@ -11,31 +11,34 @@
     "url": "https://github.com/overclokk/italystrap.git"
   },
   "devDependencies": {
-    "grunt": "~0.4.5",
-    "grunt-bump": "^0.7.2",
-    "grunt-composer": "^0.4.4",
-    "grunt-contrib-clean": "^0.7.0",
-    "grunt-contrib-compass": "^1.0.4",
-    "grunt-contrib-compress": "^0.14.0",
-    "grunt-contrib-copy": "^0.8.2",
-    "grunt-contrib-csslint": "~0.5.0",
-    "grunt-contrib-jshint": "^0.11.3",
-    "grunt-contrib-less": "^1.0.1",
-    "grunt-contrib-uglify": "^0.10.0",
-    "grunt-contrib-watch": "~0.6.1",
-    "grunt-copy-part-of-file": "^0.1.2",
-    "grunt-exec": "^0.4.6",
-    "grunt-file-creator": "^0.1.3",
-    "grunt-fontello": "^0.3.3",
-    "grunt-git": "^0.3.5",
-    "grunt-github-releaser": "^0.1.18",
-    "grunt-phpcbf": "^0.1.0",
-    "grunt-phpcs": "^0.4.0",
-    "grunt-prompt": "^1.3.0",
-    "grunt-sync": "^0.4.1",
-    "grunt-version": "^1.0.0",
-    "grunt-wp-readme-to-markdown": "^1.0.0",
+    "autoprefixer-core": "^6.0.1",
+    "grunt": "~1.0.1",
     "grunt-bower-installer": "^0.3.6",
-    "grunt-perfbudget": "^0.1.6"
+    "grunt-bump": "^0.8.0",
+    "grunt-composer": "^0.4.5",
+    "grunt-contrib-clean": "^1.1.0",
+    "grunt-contrib-compass": "^1.1.1",
+    "grunt-contrib-compress": "^1.4.3",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-csslint": "~2.0.0",
+    "grunt-contrib-jshint": "^1.1.0",
+    "grunt-contrib-less": "^1.4.1",
+    "grunt-contrib-uglify": "^3.1.0",
+    "grunt-contrib-watch": "~1.0.0",
+    "grunt-copy-part-of-file": "^0.1.5",
+    "grunt-exec": "^3.0.0",
+    "grunt-file-creator": "^0.1.3",
+    "grunt-fontello": "^0.3.4",
+    "grunt-git": "^1.0.7",
+    "grunt-github-releaser": "^0.1.18",
+    "grunt-perfbudget": "^0.2.0",
+    "grunt-phpcbf": "^0.1.1",
+    "grunt-phpcs": "^0.4.0",
+    "grunt-postcss": "^0.9.0",
+    "grunt-prompt": "^1.3.3",
+    "grunt-sync": "^0.7.0",
+    "grunt-version": "^1.2.1",
+    "grunt-wp-readme-to-markdown": "^2.0.1",
+    "load-grunt-tasks": "^3.5.2"
   }
 }
