--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,10 @@
 		}
 	],
 	"require": {
-		"php": "^5.3 || ^5.4 || ^5.5 || ^5.6 || ^7.0",
-		"overclokk/minimum-requirements": "dev-master"
+		"php" : ">=5.4",
+		"rdlowrey/auryn": "^1.4",
+		"overclokk/minimum-requirements": "dev-master",
+		"italystrap/asset": "0.0.1-alpha"
 	},
 	"autoload": {
 		"classmap": [
@@ -18,6 +20,7 @@
 			"ItalyStrap\\": "src/"
 		}
 	},
+    "minimum-stability": "dev",
 	"require-dev": {
 		"lucatume/wp-browser": "~1.21"
 	}
