--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
 		"php" : ">=5.4",
 		"rdlowrey/auryn": "^1.4",
 		"overclokk/minimum-requirements": "dev-master",
+		"italystrap/helpers": "^1.0",
 		"italystrap/asset": "0.0.1-alpha"
 	},
 	"autoload": {
