--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "ItalyStrap",
+  "name": "italystrap",
   "title": "A powerfull theme framework for WordPress",
   "description": "",
   "author": "Enea Overclokk",
-  "homepage": "http://www.overclokk.net/italystrap",
-  "version": "4.0.0-beta.4",
+  "homepage": "https://italystrap.com",
+  "version": "4.0.0-beta.5",
   "license": "GPL-2.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/overclokk/italystrap.git"
+    "url": "https://github.com/ItalyStrap/italystrap.git"
   },
   "devDependencies": {
     "autoprefixer-core": "^6.0.1",
