--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
 		}
 	],
 	"require": {
-		"php" : ">=5.4",
+		"php" : ">=7.0",
 		"rdlowrey/auryn": "^1.4",
 		"overclokk/minimum-requirements": "dev-master",
 		"italystrap/helpers": "^1.0",
@@ -17,7 +17,8 @@
 	},
 	"require-dev": {
 		"lucatume/wp-browser": "~2.2",
-		"italystrap/debug": "~1.1"
+		"italystrap/debug": "~1.1",
+		"phpstan/phpstan": "^0.11.16"
 	},
 	"autoload": {
 		"classmap": [
