--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
 	"require-dev": {
 		"lucatume/wp-browser": "~2.2",
 		"italystrap/debug": "~1.1",
-		"phpstan/phpstan": "^0.11.16"
+		"phpstan/phpstan": "^0.11.16",
+		"szepeviktor/phpstan-wordpress": "^0.2.1"
 	},
 	"autoload": {
 		"classmap": [
@@ -27,5 +28,10 @@
 			"ItalyStrap\\": "src/"
 		}
 	},
-    "minimum-stability": "stable"
+    "minimum-stability": "stable",
+	"scripts": {
+		"test": [
+			".\\vendor\\bin\\phpstan analyse src/Builders --memory-limit=3G"
+		]
+	}
 }
