Added View module

--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
 		"overclokk/minimum-requirements": "dev-master",
 		"italystrap/helpers": "^1.0",
 		"italystrap/config": "~2.0",
+		"italystrap/view": "~1.0",
 		"brain/hierarchy": "^2.4"
 	},
 	"require-dev": {
