--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -1,26 +1,16 @@
 #$ composer update --optimize-autoloader
-#$ sed -e 's#^function is_countable(#// &#' -i vendor/giacocorsiglia/wordpress-stubs/wordpress-stubs.php
 #$ vendor/bin/phpstan analyze
 
 includes:
     # @see https://github.com/phpstan/phpstan/blob/master/conf/bleedingEdge.neon
-    # Regular phpstan installation
     - vendor/phpstan/phpstan/conf/bleedingEdge.neon
-    # PHAR installation
-    #- phar://phpstan.phar/conf/bleedingEdge.neon
-    # Include this extension
     - vendor/szepeviktor/phpstan-wordpress/extension.neon
 parameters:
     level: max
     inferPrivatePropertyTypeFromConstructor: true
     paths:
         - %currentWorkingDirectory%/src/
-#    excludes_analyse:
-#    autoload_files:
-#        # Missing constants, function and class stubs
-#        - %currentWorkingDirectory%/tests/phpstan/bootstrap.php
-#        # Plugin stubs
-#        - %currentWorkingDirectory%/tests/phpstan/PLUGIN-stubs.php
+    autoload_files:
         # Procedural code
         - %currentWorkingDirectory%/functions/factory.php
     autoload_directories:
@@ -28,14 +18,3 @@ parameters:
     ignoreErrors:
         # Uses func_get_args()
         - '#^Function apply_filters(_ref_array)? invoked with [34567] parameters, 2 required\.$#'
-        - '#^Function do_action(_ref_array)? invoked with [3456] parameters, 1-2 required\.$#'
-        - '#^Function current_user_can invoked with 2 parameters, 1 required\.$#'
-        - '#^Function add_query_arg invoked with [123] parameters?, 0 required\.$#'
-        - '#^Function wp_sprintf invoked with [23456] parameters, 1 required\.$#'
-        - '#^Function add_post_type_support invoked with [345] parameters, 2 required\.$#'
-        - '#^Function ((get|add)_theme_support|current_theme_supports) invoked with [2345] parameters, 1 required\.$#'
-        # https://core.trac.wordpress.org/ticket/43304
-        - '/^Parameter #2 \$deprecated of function load_plugin_textdomain expects string, false given\.$/'
-        # WP-CLI accepts a class as callable
-        - '/^Parameter #2 \$callable of static method WP_CLI::add_command\(\) expects callable\(\): mixed, \S+ given\.$/'
-        # Please consider commenting ignores: issue URL or reason for ignoring
