--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
 	},
 	"require-dev": {
 		"lucatume/wp-browser": "~2.2",
-		"italystrap/debug": "~1.1",
+		"italystrap/debug": "*",
 		"phpstan/phpstan": "^0.11.16",
 		"szepeviktor/phpstan-wordpress": "^0.3.0"
 	},
@@ -31,7 +31,7 @@
 	"minimum-stability": "stable",
 	"scripts": {
 		"test": [
-			".\\vendor\\bin\\phpstan analyse src/Builders --memory-limit=3G"
+			".\\vendor\\bin\\phpstan analyse vendor/italystrap/view/src --memory-limit=3G"
 		]
 	}
 }
