Maybe fixed travis test

--- a/.travis.yml
+++ b/.travis.yml
@@ -112,5 +112,5 @@ script:
   # - codecept run functional
   # - codecept run integration
   # - codecept run unit
-   - codecept run wpunit
+   - vendor/bin/codecept run wpunit
 #  - codecept run wpunit && codecept run acceptance
