--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 # https://www.theaveragedev.com/installing-and-setting-up-wordpress-and-nginx-for-travis-ci-tests/
-sudo: required
+#sudo: required
 
 language: php
 
@@ -65,7 +65,7 @@ before_install:
   - export PATH=vendor/bin:$PATH
 
 install:
-  - composer install --prefer-dist
+#  - composer install --prefer-dist
   # install WordPress
   - cd $WP_FOLDER
   - ls
@@ -78,7 +78,9 @@ install:
   # copy the theme in the WordPress themes folder
   - cp -r $TRAVIS_BUILD_DIR $WP_FOLDER/wp-content/themes/italystrap
   # show the themes folder contents to make sure the theme folder is there
-  - ls $WP_FOLDER/wp-content/themes
+  - cd $WP_FOLDER/wp-content/themes
+  - composer install --prefer-dist
+  - ls
   # activate the theme
   - wp theme activate italystrap
   # make sure the theme is active on the site
@@ -87,6 +89,7 @@ install:
   - wp db export $TRAVIS_BUILD_DIR/tests/_data/dump.sql
   # get back to the build folder
   - cd $TRAVIS_BUILD_DIR
+  - composer install --prefer-dist
   - ls
   # open up the site folder to allow the PHP application to read/write/execute on it
   - sudo chmod -R 777 $WP_FOLDER
