Some PHPstan compat

--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -11,12 +11,14 @@ parameters:
     paths:
         - %currentWorkingDirectory%/src/
     excludes_analyse:
-        - %currentWorkingDirectory%/src/Customizer/settings/
+        - %currentWorkingDirectory%/src/Customizer/
+        - %currentWorkingDirectory%/src/Asset/
     autoload_files:
         # Procedural code
         - %currentWorkingDirectory%/functions/autoload.php
     ignoreErrors:
         # Uses func_get_args()
         - '#^Function apply_filters invoked with [34567] parameters, 2 required\.$#'
-        - '#Access to an undefined property ItalyStrap\\Config\\Config::\$[a-zA-Z0-9_]+#'
-        - '#Access to an undefined property ItalyStrap\\Config\\ConfigInterface::\$[a-zA-Z0-9_]+#'
+        #- '#Access to an undefined property ItalyStrap\\Config\\Config::\$[a-zA-Z0-9_]+#'
+        #- '#Access to an undefined property ItalyStrap\\Config\\ConfigInterface::\$[a-zA-Z0-9_]+#'
+        - '#Class ItalyStrap\\Migrations\\Old_Hooks not found#'
