--- a/.travis.yml
+++ b/.travis.yml
@@ -106,7 +106,7 @@ before_script:
   - codecept build
 
 script:
-#  - codecept run acceptance
+  - codecept run acceptance --debug
 #  - codecept run functional
 #  - codecept run integration
 #  - codecept run unit
