--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
 		"lucatume/function-mocker-le": "^1.0",
 		"italystrap/debug": "*",
 		"phpstan/phpstan": "^0.11.16",
-		"szepeviktor/phpstan-wordpress": "^0.3.0"
+		"szepeviktor/phpstan-wordpress": "^0.3.0",
+		"victorjonsson/markdowndocs": "^1.3"
 	},
 	"autoload": {
 		"psr-4": {
