--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,10 @@
 		{
 			"name": "overclokk",
 			"email": "info@overclokk.net"
+		},
+		{
+			"name"    : "Contributors",
+			"homepage": "https://github.com/ItalyStrap/italystrap/graphs/contributors"
 		}
 	],
 	"require": {
@@ -24,7 +28,11 @@
 		"italystrap/debug": "*",
 		"phpstan/phpstan": "^0.11.16",
 		"szepeviktor/phpstan-wordpress": "^0.3.0",
-		"victorjonsson/markdowndocs": "^1.3"
+		"victorjonsson/markdowndocs": "^1.3",
+		"dealerdirect/phpcodesniffer-composer-installer": "^0.5.0",
+		"phpcompatibility/php-compatibility": "*",
+		"wp-coding-standards/wpcs": "^2.1",
+		"wptrt/wpthemereview": "*"
 	},
 	"autoload": {
 		"psr-4": {
@@ -34,7 +42,12 @@
 	"minimum-stability": "stable",
 	"scripts": {
 		"test": [
-			".\\vendor\\bin\\phpstan analyse vendor/italystrap/view/src --memory-limit=3G"
-		]
+			".\\vendor\\bin\\phpstan analyse src --memory-limit=3G"
+		],
+		"cs": "\\vendor\\bin\\phpcs --standard=phpcs.xml src"
+	},
+	"support"    : {
+		"issues": "https://github.com/ItalyStrap/italystrap/issues",
+		"source": "https://github.com/ItalyStrap/italystrap"
 	}
 }
