--- a/composer.json
+++ b/composer.json
@@ -2,51 +2,62 @@
 	"name": "italystrap/italystrap",
 	"description": "Theme Framework for WordPress",
 	"type": "wordpress-theme",
+	"license": "",
 	"authors": [
 		{
 			"name": "overclokk",
-			"email": "info@overclokk.net"
+			"email": "info@overclokk.net",
+			"homepage": "https://www.italystrap.com",
+			"role": "Developer"
 		},
 		{
 			"name"    : "Contributors",
 			"homepage": "https://github.com/ItalyStrap/italystrap/graphs/contributors"
 		}
 	],
+	"minimum-stability": "stable",
 	"require": {
-		"php" : ">=7.0",
-		"rdlowrey/auryn": "^1.4",
-		"overclokk/minimum-requirements": "dev-master",
+		"php" : ">=7.2",
 		"italystrap/empress": "^1.0",
 		"italystrap/event": "dev-master",
 		"italystrap/config": "^2.0",
 		"italystrap/helpers": "^1.0",
 		"italystrap/html": "^1.0",
 		"italystrap/view": "^1.0",
+		"rdlowrey/auryn": "^1.4",
+		"overclokk/minimum-requirements": "dev-master",
 		"brain/hierarchy": "^2.4"
 	},
 	"require-dev": {
 		"lucatume/wp-browser": "~2.2",
+		"codeception/c3": "2.*",
 		"lucatume/function-mocker-le": "^1.0",
-		"italystrap/debug": "*",
+		"italystrap/debug": "^2.1",
+		"victorjonsson/markdowndocs": "^1.3",
+		"wptrt/wpthemereview": "*",
+		"wp-coding-standards/wpcs": "^2.1",
+		"phpcompatibility/php-compatibility": "^9.3",
+		"dealerdirect/phpcodesniffer-composer-installer": "^0.5.0",
 		"phpstan/phpstan": "^0.11.16",
 		"szepeviktor/phpstan-wordpress": "^0.3.0",
-		"victorjonsson/markdowndocs": "^1.3",
-		"dealerdirect/phpcodesniffer-composer-installer": "^0.5.0",
-		"phpcompatibility/php-compatibility": "*",
-		"wp-coding-standards/wpcs": "^2.1",
-		"wptrt/wpthemereview": "*"
+		"phpbench/phpbench": "@dev",
+		"infection/infection": "^0.15.3",
+		"vimeo/psalm": "^3.9",
+		"phpmetrics/phpmetrics": "^2.5"
 	},
 	"autoload": {
 		"psr-4": {
 			"ItalyStrap\\": "src/"
 		}
 	},
-	"minimum-stability": "stable",
 	"scripts": {
 		"test": [
 			".\\vendor\\bin\\phpstan analyse src --memory-limit=3G"
 		],
-		"cs": "\\vendor\\bin\\phpcs --standard=phpcs.xml src"
+		"cs": "\\vendor\\bin\\phpcs --standard=phpcs.xml src",
+		"metrics": [
+			"vendor/bin/phpmetrics --report-html='./tests/_output/report' ./src"
+		]
 	},
 	"support"    : {
 		"issues": "https://github.com/ItalyStrap/italystrap/issues",
