--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   "devDependencies": {
     "autoprefixer-core": "^6.0.1",
     "grunt": "~1.0.1",
-    "grunt-bower-installer": "^0.3.6",
     "grunt-bump": "^0.8.0",
     "grunt-composer": "^0.4.5",
     "grunt-contrib-clean": "^1.1.0",
@@ -22,7 +21,6 @@
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-csslint": "~2.0.0",
     "grunt-contrib-jshint": "^1.1.0",
-    "grunt-contrib-less": "^1.4.1",
     "grunt-contrib-uglify": "^3.1.0",
     "grunt-contrib-watch": "~1.0.0",
     "grunt-copy-part-of-file": "^0.1.5",
@@ -32,13 +30,13 @@
     "grunt-git": "^1.0.7",
     "grunt-github-releaser": "^0.1.18",
     "grunt-perfbudget": "^0.2.0",
-    "grunt-phpcbf": "^0.1.1",
-    "grunt-phpcs": "^0.4.0",
     "grunt-postcss": "^0.9.0",
     "grunt-prompt": "^1.3.3",
     "grunt-sync": "^0.7.0",
     "grunt-version": "^1.2.1",
     "grunt-wp-readme-to-markdown": "^2.0.1",
+    "gulp": "^4.0.2",
+    "gulp-compass": "^2.1.0",
     "load-grunt-tasks": "^3.5.2"
   }
 }
