--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "devDependencies": {
     "autoprefixer": "^9.7.4",
     "cssnano": "^4.1.10",
-    "grunt": "~1.0.1",
+    "grunt": "1.0.1",
     "grunt-bump": "^0.8.0",
     "grunt-composer": "^0.4.5",
     "grunt-contrib-clean": "^1.1.0",
@@ -37,12 +37,15 @@
     "grunt-version": "^1.2.1",
     "grunt-wp-readme-to-markdown": "^2.0.1",
     "gulp": "^4.0.2",
+    "gulp-clean": "^0.4.0",
     "gulp-compass": "^2.1.0",
+    "gulp-copy": "^4.0.1",
     "gulp-postcss": "^8.0.0",
     "gulp-sourcemaps": "^2.6.5",
+    "gulp-zip": "^5.0.1",
+    "jasmine": "^3.5.0",
     "load-grunt-tasks": "^3.5.2",
     "pixrem": "^5.0.0",
-    "jasmine": "^3.5.0",
     "qunit": "^2.9.3"
   }
 }
