--- a/package.json
+++ b/package.json
@@ -40,8 +40,10 @@
     "gulp-clean": "^0.4.0",
     "gulp-compass": "^2.1.0",
     "gulp-copy": "^4.0.1",
+    "gulp-imagemin": "^7.1.0",
     "gulp-postcss": "^8.0.0",
     "gulp-sourcemaps": "^2.6.5",
+    "gulp-webp": "^4.0.1",
     "gulp-zip": "^5.0.1",
     "jasmine": "^3.5.0",
     "load-grunt-tasks": "^3.5.2",
