--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "gulp-copy": "^4.0.1",
     "gulp-imagemin": "^7.1.0",
     "gulp-postcss": "^8.0.0",
+    "gulp-rename": "^2.0.0",
     "gulp-sourcemaps": "^2.6.5",
+    "gulp-uglify": "^3.0.2",
     "gulp-webp": "^4.0.1",
     "gulp-zip": "^5.0.1",
     "jasmine": "^3.5.0",
