--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "devDependencies": {
     "autoprefixer": "^9.7.4",
     "cssnano": "^4.1.10",
-    "grunt": "1.0.1",
+    "grunt": "^1.0.4",
     "grunt-bump": "^0.8.0",
     "grunt-composer": "^0.4.5",
     "grunt-contrib-clean": "^1.1.0",
@@ -23,22 +23,23 @@
     "grunt-contrib-csslint": "~2.0.0",
     "grunt-contrib-jshint": "^1.1.0",
     "grunt-contrib-uglify": "^3.1.0",
-    "grunt-contrib-watch": "~1.0.0",
+    "grunt-contrib-watch": "^1.1.0",
     "grunt-copy-part-of-file": "^0.1.5",
     "grunt-exec": "^3.0.0",
     "grunt-file-creator": "^0.1.3",
-    "grunt-fontello": "^0.3.4",
-    "grunt-git": "^1.0.7",
+    "grunt-fontello": "^0.3.7",
+    "grunt-git": "^1.0.14",
     "grunt-github-releaser": "^0.1.18",
     "grunt-perfbudget": "^0.2.0",
     "grunt-postcss": "^0.9.0",
     "grunt-prompt": "^1.3.3",
-    "grunt-sync": "^0.7.0",
+    "grunt-sync": "^0.8.2",
     "grunt-version": "^1.2.1",
     "grunt-wp-readme-to-markdown": "^2.0.1",
     "gulp": "^4.0.2",
     "gulp-clean": "^0.4.0",
     "gulp-compass": "^2.1.0",
+    "gulp-concat": "^2.6.1",
     "gulp-copy": "^4.0.1",
     "gulp-imagemin": "^7.1.0",
     "gulp-postcss": "^8.0.0",
