--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,8 @@
 		"phpbench/phpbench": "@dev",
 		"infection/infection": "^0.15.3",
 		"vimeo/psalm": "^3.9",
-		"phpmetrics/phpmetrics": "^2.5"
+		"phpmetrics/phpmetrics": "^2.5",
+		"symfony/asset": "^5.0"
 	},
 	"autoload": {
 		"psr-4": {
