--- a/.env
+++ b/.env
@@ -1,12 +1,12 @@
 WP_ROOT_FOLDER="/tmp/wordpress"
 TEST_SITE_WP_ADMIN_PATH="/wp-admin"
 TEST_SITE_DB_NAME="test"
-TEST_SITE_DB_HOST="127.0.0.1"
+TEST_SITE_DB_HOST="localhost"
 TEST_SITE_DB_USER="root"
 TEST_SITE_DB_PASSWORD=""
 TEST_SITE_TABLE_PREFIX="wp_"
 TEST_DB_NAME="wploader"
-TEST_DB_HOST="127.0.0.1"
+TEST_DB_HOST="localhost"
 TEST_DB_USER="root"
 TEST_DB_PASSWORD=""
 TEST_TABLE_PREFIX="wp_"
