--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,12 @@
 {
 	"name": "italystrap/italystrap",
 	"description": "Theme Framework for WordPress",
+	"keywords": ["WordPress", "WordPress theme", "theme"],
 	"type": "wordpress-theme",
-	"license": "",
+	"license": "GPL-2.0-or-later",
 	"authors": [
 		{
-			"name": "overclokk",
+			"name": "Enea Overclokk",
 			"email": "info@overclokk.net",
 			"homepage": "https://www.italystrap.com",
 			"role": "Developer"
@@ -23,28 +24,38 @@
 		"italystrap/config": "^2.0",
 		"italystrap/helpers": "^1.0",
 		"italystrap/html": "^1.0",
-		"italystrap/view": "^1.0",
+		"italystrap/view": "dev-master",
+		"italystrap/finder": "dev-master",
 		"rdlowrey/auryn": "^1.4",
 		"overclokk/minimum-requirements": "dev-master",
 		"brain/hierarchy": "^2.4"
 	},
 	"require-dev": {
-		"lucatume/wp-browser": "~2.2",
-		"codeception/c3": "2.*",
+		"lucatume/wp-browser": "^2.4",
 		"lucatume/function-mocker-le": "^1.0",
-		"italystrap/debug": "^2.1",
+		"codeception/c3": "2.*",
+		"codeception/module-asserts": "^1.0",
+		"codeception/module-phpbrowser": "^1.0",
+		"codeception/module-webdriver": "^1.0",
+		"codeception/module-db": "^1.0",
+		"codeception/module-filesystem": "^1.0",
+		"codeception/module-cli": "^1.0",
+		"codeception/util-universalframework": "^1.0",
+		"brianium/paratest": "^4.0",
+		"italystrap/debug": "^2.0",
 		"victorjonsson/markdowndocs": "^1.3",
 		"wptrt/wpthemereview": "*",
-		"wp-coding-standards/wpcs": "^2.1",
-		"phpcompatibility/php-compatibility": "^9.3",
+		"squizlabs/php_codesniffer": "*",
+		"phpcompatibility/php-compatibility": "*",
 		"dealerdirect/phpcodesniffer-composer-installer": "^0.5.0",
 		"phpstan/phpstan": "^0.11.16",
 		"szepeviktor/phpstan-wordpress": "^0.3.0",
+		"vimeo/psalm": "^3.9",
 		"phpbench/phpbench": "@dev",
 		"infection/infection": "^0.15.3",
-		"vimeo/psalm": "^3.9",
 		"phpmetrics/phpmetrics": "^2.5",
-		"symfony/asset": "^5.0"
+		"symfony/asset": "^5.0",
+		"inpsyde/assets": "^2.1"
 	},
 	"autoload": {
 		"psr-4": {
@@ -53,11 +64,28 @@
 	},
 	"scripts": {
 		"test": [
-			".\\vendor\\bin\\phpstan analyse src --memory-limit=3G"
+			"test"
 		],
-		"cs": "\\vendor\\bin\\phpcs --standard=phpcs.xml src",
+		"cs": [
+			"vendor\\bin\\phpcbf -p --ignore=./tests/_support/* ./src/ ./tests/ && vendor\\bin\\phpcs -p --ignore=./tests/_support/* ./src/ ./tests/"
+		],
+		"analyze": [
+			"vendor\\bin\\phpstan analyze --level=max && vendor\\bin\\psalm"
+		],
+		"unit": [
+			"vendor\\bin\\codecept run unit && vendor\\bin\\infection --threads=8"
+		],
+		"bench": [
+			"vendor\\bin\\phpbench run --report=performance"
+		],
 		"metrics": [
-			"vendor/bin/phpmetrics --junit --report-html='./tests/_output/report' ./src"
+			"vendor\\bin\\phpmetrics --report-html='./tests/_output/report' ./src"
+		],
+		"insights": [
+			"vendor\\bin\\phpinsights"
+		],
+		"clean": [
+			"vendor\\bin\\codecept clean"
 		]
 	},
 	"support"    : {
