--- a/package.json
+++ b/package.json
@@ -11,18 +11,18 @@
     "url": "https://github.com/ItalyStrap/italystrap.git"
   },
   "devDependencies": {
-    "autoprefixer": "^9.7.4",
+    "autoprefixer": "^9.8.5",
     "cssnano": "^4.1.10",
-    "grunt": "^1.0.4",
+    "grunt": "^1.2.1",
     "grunt-bump": "^0.8.0",
     "grunt-composer": "^0.4.5",
     "grunt-contrib-clean": "^1.1.0",
     "grunt-contrib-compass": "^1.1.1",
-    "grunt-contrib-compress": "^1.4.3",
+    "grunt-contrib-compress": "^1.6.0",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-csslint": "~2.0.0",
     "grunt-contrib-jshint": "^1.1.0",
-    "grunt-contrib-uglify": "^3.1.0",
+    "grunt-contrib-uglify": "^3.4.0",
     "grunt-contrib-watch": "^1.1.0",
     "grunt-copy-part-of-file": "^0.1.5",
     "grunt-exec": "^3.0.0",
@@ -34,7 +34,7 @@
     "grunt-postcss": "^0.9.0",
     "grunt-prompt": "^1.3.3",
     "grunt-sync": "^0.8.2",
-    "grunt-version": "^1.2.1",
+    "grunt-version": "^1.3.2",
     "grunt-wp-readme-to-markdown": "^2.0.1",
     "gulp": "^4.0.2",
     "gulp-clean": "^0.4.0",
@@ -47,13 +47,13 @@
     "gulp-sourcemaps": "^2.6.5",
     "gulp-uglify": "^3.0.2",
     "gulp-webp": "^4.0.1",
-    "gulp-zip": "^5.0.1",
-    "jasmine": "^3.5.0",
+    "gulp-zip": "^5.0.2",
+    "jasmine": "^3.6.1",
     "load-grunt-tasks": "^3.5.2",
     "pixrem": "^5.0.0",
-    "qunit": "^2.9.3"
+    "qunit": "^2.10.1"
   },
   "dependencies": {
-    "bootstrap": "^4.4.1"
+    "bootstrap": "^5.0.0-alpha1"
   }
 }
