--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -19,7 +19,6 @@ parameters:
         - %currentWorkingDirectory%/src/Css/
         - %currentWorkingDirectory%/src/Custom/
         - %currentWorkingDirectory%/src/Customizer/
-        - %currentWorkingDirectory%/src/Event/
         - %currentWorkingDirectory%/src/Navbar/
         - %currentWorkingDirectory%/src/User/
         - %currentWorkingDirectory%/config/theme/scripts.php
@@ -38,3 +37,6 @@ parameters:
         - '#Class ItalyStrap\\Migrations\\Old_Hooks not found#'
         - '#Argument of an invalid type ItalyStrap\\Config\\[a-zA-Z_]+ supplied for foreach, only iterables are supported.#'
         - '#Function new_cmb2_box not found#'
+        - '#Constant CURRENT_TEMPLATE_SLUG not found#'
+        - '#Constant STYLESHEETPATH not found#'
+        - '#Constant TEMPLATEPATH not found#'
