Fix undefined and try functional on travis.ci

--- a/.travis.yml
+++ b/.travis.yml
@@ -110,6 +110,6 @@ script:
 #  - vendor/bin/phpcs --ignore=./tests/_support/* ./src/ ./tests/
   - vendor/bin/phpstan analyze
 #  - vendor/bin/psalm
-  - codecept run wpunit && codecept run unit --coverage-text
+  - codecept run wpunit && codecept run unit --coverage-text && codecept run functional
 #  - vendor/bin/infection --threads=4
 #  - vendor/bin/phpbench run --report=performance
