--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ notifications:
   email: false
 
 php:
-  - '7.2'
+  - 7.2
 
 matrix:
   fast_finish: true
@@ -110,6 +110,6 @@ script:
 #  - vendor/bin/phpcs --ignore=./tests/_support/* ./src/ ./tests/
   - vendor/bin/phpstan analyze
 #  - vendor/bin/psalm
-  - codecept run wpunit && codecept run unit --coverage-text && codecept run functional
+  - codecept run wpunit && codecept run unit --coverage-text
 #  - vendor/bin/infection --threads=4
 #  - vendor/bin/phpbench run --report=performance
