--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "url": "https://github.com/ItalyStrap/italystrap.git"
   },
   "devDependencies": {
+    "@babel/core": "^7.11.6",
+    "@babel/preset-env": "^7.11.5",
+    "@types/jquery": "^3.5.1",
     "autoprefixer": "^9.8.6",
     "cssnano": "^4.1.10",
     "grunt": "^1.3.0",
+    "grunt-babel": "^8.0.0",
     "grunt-bump": "^0.8.0",
     "grunt-composer": "^0.4.5",
     "grunt-contrib-clean": "^1.1.0",
@@ -21,6 +25,7 @@
     "grunt-contrib-compress": "^1.6.0",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-csslint": "~2.0.0",
+    "grunt-contrib-imagemin": "^1.0.1",
     "grunt-contrib-jshint": "^1.1.0",
     "grunt-contrib-uglify": "^3.4.0",
     "grunt-contrib-watch": "^1.1.0",
@@ -34,6 +39,7 @@
     "grunt-postcss": "^0.9.0",
     "grunt-prompt": "^1.3.3",
     "grunt-sync": "^0.8.2",
+    "grunt-ts": "^6.0.0-beta.22",
     "grunt-version": "^1.3.2",
     "grunt-wp-readme-to-markdown": "^2.0.1",
     "gulp": "^4.0.2",
@@ -52,6 +58,7 @@
     "load-grunt-tasks": "^3.5.2",
     "pixrem": "^5.0.0",
     "qunit": "^2.11.2",
+    "typescript": "^4.0.2",
     "webpack-stream": "^5.2.1"
   },
   "dependencies": {
