--- a/composer.json
+++ b/composer.json
@@ -57,7 +57,8 @@
 		"infection/infection": "^0.15.3",
 		"phpmetrics/phpmetrics": "^2.5",
 		"symfony/asset": "^5.0",
-		"inpsyde/assets": "^2.1"
+		"inpsyde/assets": "^2.1",
+		"lucatume/function-mocker": "^1.3"
 	},
 	"autoload": {
 		"psr-4": {
