--- a/tests/unit.suite.yml
+++ b/tests/unit.suite.yml
@@ -7,4 +7,5 @@ modules:
     enabled:
         - Asserts
         - \Helper\Unit
-    step_decorators: ~        
+    step_decorators: ~
+bootstrap: bootstrap.php
