--- a/.travis.yml
+++ b/.travis.yml
@@ -118,6 +118,7 @@ before_script:
 
 script:
   - find ./src/ ./tests/ -type f -name '*.php' -print0 | xargs -0 -L 1 -P 4 -- php -l
+  - composer cs
 #  - vendor/bin/phpcs --ignore=./tests/_support/* ./src/ ./tests/
   - vendor/bin/phpstan analyze
 #  - vendor/bin/psalm
