--- a/.travis.yml
+++ b/.travis.yml
@@ -118,8 +118,7 @@ before_script:
 
 script:
   - find ./config/ ./functions/ ./src/ ./templates/ ./tests/ -type f -name '*.php' -print0 | xargs -0 -L 1 -P 4 -- php -l
-  - composer cs
-#  - vendor/bin/phpcs --ignore=./tests/_support/* ./src/ ./tests/
+  - vendor/bin/phpcs --ignore=./tests/_support/* ./config/ ./functions/ ./src/ ./templates/ ./tests/
   - vendor/bin/phpstan analyze
 #  - vendor/bin/psalm
   - codecept run wpunit && codecept run unit --coverage-text
