--- a/composer.json
+++ b/composer.json
@@ -58,7 +58,8 @@
 		"phpmetrics/phpmetrics": "^2.5",
 		"symfony/asset": "^5.0",
 		"inpsyde/assets": "^2.1",
-		"lucatume/function-mocker": "^1.3"
+		"lucatume/function-mocker": "^1.3",
+		"phpspec/prophecy-phpunit": "^1.1"
 	},
 	"autoload": {
 		"psr-4": {
