--- a/.github/workflows/integration-e2e.yml
+++ b/.github/workflows/integration-e2e.yml
@@ -15,9 +15,9 @@ env:
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, Dev ]
   pull_request:
-    branches: [ master ]
+    branches: [ master, Dev ]
 
 jobs:
   integration:
