--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -65,10 +65,10 @@ jobs:
           wp core download --version=$WP_VERSION
 
       - name: Folder permission for _output
-        run: ls
+        run: ls tests
 
       - name: Folder permission for _output
-        run: sudo chmod -R 777 "/tests/_output"
+        run: sudo chmod -R 777 tests/_output
 
       - name: Run test suite
         run: vendor/bin/codecept run unit --coverage-text
